[project]
name = "neo-playbook"
version = "0.1.0"
description = "Generate a PDF magazine of all known Neo Geo games from scraped web data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "beautifulsoup4>=4.12.2",
    "certifi>=2023.7.22",
    "charset-normalizer>=3.3.0",
    "et-xmlfile>=1.1.0",
    "fpdf>=1.7.2",
    "idna>=3.4",
    "openpyxl>=3.1.2",
    "Pillow>=10.1.0",
    "python-slugify>=8.0.1",
    "PyYAML>=6.0.1",
    "requests>=2.31.0",
    "soupsieve>=2.5",
    "text-unidecode>=1.3",
    "urllib3>=2.0.7",
    "wikipedia-api>=0.6.0",
    "wikipedia>=1.4.0",
]
